syntax = "proto3";

package list;

service ListService {
    rpc GetList (GetListReq) returns (ListResp) {}
    rpc GetOneListItem (GetOneListReq) returns (ListItem);
}

message List {
    string id = 1;
    string content = 2;
}

message GetListReq {
    string list_id = 1;
}

message ListResp {
    repeated List items = 1;
}

message GetOneListReq {
    string list_id = 1;
}

message ListItem {
    List item = 1;
}